--- a/work1/hh404358/work1.css
+++ b/work1/hh404358/work1.css
@@ -23,6 +23,7 @@ nav {
 nav a {
     width: 250px;
     height: 50px;
+    line-height: 50px;
     display: flex;
     justify-content: center;
     border-radius: 25px;
