--- a/work1/Kikikisum/c.css
+++ b/work1/Kikikisum/c.css
@@ -9,7 +9,7 @@ body {
 /*导航栏*/
 
 .nav {
-    height: 40px;
+    height: 35px;
     width: 100%;
     line-height: 40px;
     display: flex;
@@ -19,27 +19,28 @@ body {
     list-style: none;
     margin: 0;
     width: 100%;
-    padding: 3px;
 }
 
 .nav li {
     display: inline-block;
     width: 33%;
     text-align: center;
+    margin-top: 10px;
 }
 
 .nav a {
     text-decoration: none;
     color: black;
     transition: all .1s;
+    padding: 10px;
 }
 
 /*处理鼠标移入移出的效果*/
 
 .nav a:hover {
     text-decoration: underline;
-    background-color:gray;
-    border-radius: 5px;
+    background-color:RGB(56, 95, 152);
+    border-radius: 15px;
 }
 
 /*作品介绍的内容*/
@@ -49,6 +50,7 @@ body {
     justify-content: center;
     border: 1px solid RGB(102,143,195);
     border-radius: 10px;
+    margin-top: 20px;
     margin-left: 13%;
     margin-right: 13%;
     height: 250px;
