--- a/work1/merakimoss/work1.css
+++ b/work1/merakimoss/work1.css
@@ -1,239 +1,201 @@
-* {
-    margin: 0;
-    padding: 0;
-    font-family: 'Microsoft YaHei';
-}
-
-body {
-    width: 1430px;
-    margin: 0 auto;
+/*背景颜色*/
+body{
     background-color: #DCF3FF;
 }
-
-/* 导航栏 */
-
-nav {
-    height: 50px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem;
+/* =============================================================== */
+/*导航栏*/
+ul{
+    display: block;
+    list-style-type: none;
+    margin: 0 auto;              /* 外边距 */
+    padding: 0;             /* 内边距 */
+    width: 80%;             /* 宽度 */
+    height: 45px;           /* 导航栏高度 */
+    text-align: center;  
 }
+li{
+    /* list-style: none; */
+    display: block;        /* 水平导航栏方法一 */
+    float: left;
+    width: 33.33%;
+    margin-top: 1.5%;
 
-nav a {
-    width: 250px;
-    height: 50px;
+}
+a{
+    color: black;         /* 设置字体颜色 */
+    text-decoration: none;  /* 无下划线 */
+    border-radius: 30%;    /* 圆角 */
+    width: 500px;
+    height: 30px;
     line-height: 50px;
-    display: flex;
-    justify-content: center;
-    border-radius: 25px;
-    font-size: 25px;
-    color: black;
-    text-decoration: none;
-    text-align: center;
-    border-radius: 25px;
-    cursor: pointer;
-    transition: 0.5s;
+}
+a:link{
+    color: green;
 }
 
-nav a:hover {
-    background-color: rgb(55, 96, 152);
-    text-decoration: underline;
-}
-
-
-/* 简介 */
-
-#brief {
-    height: 312px;
-    border-radius: 20px;
-    border: 2px solid #000;
-}
-
-/* 简介-图片 */
-
-#brief #all {
-    float: left;
-    width: 230px;
-    height: 230px;
-    margin: 38px 50px 38px 25px;
-    background: url(images/all.png);
-    background-size: 230px 230px;
-    border-radius: 50%;
-    transition: all .2s ease-in-out;
-}
-
-#brief #all:hover {
-    transform: scale(1.2);
-}
-
-/* 简介-文本 */
-
-#brief p {
-    float: left;
-    width: 1100px;
-    height: 68px;
-    margin-top: 122px;
-    font-size: 25px;
-}
-
-/* 人物介绍 */
-
-#character {
-    height: 520px;
-    margin-top: 48px;
-}
-
-#character>div {
-    float: left;
-    width: 310px;
-}
-
-#character #paidaxing {
-    margin: 0px 250px;
-}
-
-/* 人物介绍-文本 */
-
-#character>div .character-text {
-    height: 188px;
-    border-radius: 20px;
-    font-size: 25px;
+a:hover{
+    background-color: #385C81;  
     color: white;
-    text-align: center;
-    transition: transform .5s;
 }
+/* ==================================================== */
 
-#character>div .character-text:hover {
-    transform: scale(1.2);
+/* 三列介绍 */
+.column {
+    float: left;
+    width: 33.33%;
 }
-
-#character>div .character-text p {
-    margin: 20px 15px 0;
-    text-align: left;
+/* ==================================================== */    
+/* 界面一 */
+#chara>div #img:hover{
+    transform: scale(1.3);
 }
-
-/* 人物介绍-图片 */
-
-#character>div .character-img {
-    height: 310px;
-    margin-top: 30px;
-    border-radius: 20px;
-    transition: transform .5s;
-}
-
-#character>div .character-img:hover {
-    transform: scale(1.2);
-}
-
-
-#character #haimianbaobao>div {
-    background-color: rgba(248, 207, 55);
-}
-
-#character #haimianbaobao .character-img {
-    background-image: url(images/haimianbaobao.jpg);
-    background-size: contain;
-}
-
-#character #paidaxing>div {
-    background-color: rgba(208, 128, 121);
-}
-
-#character #paidaxing .character-img {
-    background-image: url(images/paidaxing.jpg);
-    background-size: contain;
-}
-
-#character #zhangyuge>div {
-    background-color: rgba(56, 95, 152);
-}
-
-#character #zhangyuge .character-img {
-    background-image: url(images/zhangyuge.jpg);
-    background-size: contain;
-}
-
-/* 系列作品 */
-
-#works {
-    height: 158px;
-    margin-top: 52px;
-    text-align: center;
-    font-size: 20px;
-}
-
-/* 系列作品-表格 */
-
-#works table {
+/* 界面一：总介绍 */
+#chara .intro{
+    /* border-radius: 10px; */
+    margin: auto;               /* 居中 */
+    margin-top: 3%;   
+    margin-bottom: 5%;   
+    padding: 3%;
+    outline-style: solid;
+    outline-color: #5883BC;
+    border-radius: 25px;        /* 圆角 */
+    width: 90%;
     height: 130px;
-    border-radius: 10px;
-    /* 取消<td>之间的空隙 */
-    border-collapse: collapse;
-    
+    text-align: left;
+    color: black;
 }
-
-#works table td{
-    padding: 0px;
+/* #chara .intro #img{
+    background-image: url(img/all.jpeg);
+    background-size: contain;
+    left: 0; 
+    top:0;
+    float: left; 
+    width: 120px; 
+    height: 120px; 
+    border-radius: 50%;
+} */
+/* 界面一：三栏介绍 */
+#chara #hai{     
+    /* 背景块 */
+    outline-style: none;            /* 元素外边框：去掉 */
+    background-color: #F6CE39;
+    border-radius: 25px;            /* 圆角 */
+    /* 文字 */
+    text-align: left;               /* 左对齐 */
+    color: white;       
+    /* 文本关系 */
+    margin: auto;       /* 居中 */
+    border-top: 25%;
+    padding: 5% 5%;
+    width: 163px;
+    height: 100px;   
+}    
+#chara #pai{      
+    /* 背景块 */
+    outline-style: none;
+    background-color: #CF8177;
+    border-radius: 25px;
+    /* 文字 */
+    text-align: left;
+    color: white;        
+    /* 文本关系 */
+    margin: auto;       /* 居中 */
+    border-top: 25%;
+    padding: 5% 5%;
+    width: 163px;
+    height: 100px;
 }
-
-#works table td:nth-child(1) {
-    width: 808px;
-    background-color: rgb(153, 204, 255);
-}
-
-#works table td:nth-child(2) {
-    width: 522px;
-    background-color: rgb(135, 206, 235);
-}
-
-#works table td:nth-child(3) {
-    width: 100px;
-    background-color: rgb(102, 153, 204);
-}
-
-/* 我们相关 */
-
-#feedback {
-    height: 330px;
-    margin-top: 63px;
-}
-
-#feedback form textarea {
-    width: 1430px;
-    height: 244px;
-    border-width: 2px;
-    border-radius: 8px;
-    border-color: #87CEED;
-    background-color: #DCF3FF;
-    font-size: 20px;
-    color:#000;
-}
-
-#feedback form #submit {
-    width: 168px;
-    height: 64px;
-    margin: 22px 0 0 1262px;
-    border-radius: 8px;
-    border-color: #6495ED;
-    background-color: #6495ED;
-    font-size: 20px;
+#chara #zhang{       
+    /* 背景块 */
+    outline-style: none;
+    background-color: #376098;
+    border-radius: 25px;
+    /* 文字 */
+    text-align: left;
     color: white;
-    transition: background-color .1s;
+    /* 文本关系 */
+    margin: auto;       /* 居中 */
+    border-top: 25%;
+    padding: 5% 5%;
+    width: 163px;
+    height: 100px;
 }
-
-#feedback form #submit:hover {
-    background-color: #486CF2;
+#chara img{
+    position: relative; 
+    left: 25%; 
+    top: 50%; 
+    width: 200px; 
+    border-radius: 10%;
+    object-fit: cover;      /* 维持图像比例 */
 }
-
-#feedback form #submit:active {
-    background-color: #486CF2;
+#chara img:hover{
+    transition: width 5s;
+    border-radius: 10%;
+    transform: scale(1.1);   /* 尺寸太大的话页面会移动 */
 }
-
-footer p {
-    height: 20px;
-    margin: 1000px auto 50px;
-    text-align: right;
-    font-size: 20px;
-    color: grey;
+/* ==================================================== */
+/* part二 */
+#series table{
+    margin: auto;
+    padding-top: 70%;
+    width: 80%;
+    border-collapse: collapse;
+}
+#series table td{
+    padding: 0;
+}
+#series table td:hover{
+    background-color: rgb(111, 188, 239);
+    color: rgb(236, 239, 231);
+}
+#series table td:first-child{
+    background-color: #99CCFF;
+}
+#series table td:nth-child(2){
+    background-color: #87CEEB;
+}
+#series table td:last-child{
+    background-color: #6699CC;
+}
+#series table, th, td {
+    /* border: hidden; */
+    border-width: 0;
+    text-align: center;
+}
+/* ==================================================== */
+/* part三 */
+/* 输入框 */
+#our textarea {
+    box-sizing: border-box;
+    margin-top: 50px;
+    padding: 12px 20px;
+    width: 100%;
+    height: 300px;
+    border-radius: 20px;
+    resize: none;
+    border: 2px solid #87CEED;
+    background-color: #b8ebf5;
+}
+/* 提交方位 */
+#our .s{
+    margin: 30px;
+    width: 20px;
+    content: "";
+    color: white;
+    display: table;
+    float: right;
+}
+#our input[type="submit"]{
+    border: none;
+    border-radius: 2%;
+    background-color:#376098;
+    color: white;
+    font-size: 12px;
+    width: 100px;
+    height: 40px;
+}
+input[type="submit"]:hover{
+    border-radius: 2%;
+    background-color:#181fe7;
+    color: white;
 }
