--- a/work1/rsooio/global.css
+++ b/work1/rsooio/global.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  background-color: cyan;
+  background-color: #00ffff;
   padding-left: var(--paddint-x);
   padding-right: var(--paddint-x);
   padding-top: 1rem;
@@ -14,9 +14,11 @@ body {
   border-radius: 1rem;
 }
 
-.title {
+.navigation {
   display: flex;
   justify-content: space-between;
+  border-radius: 999rem;
+  background-color: rgba(0, 0, 255, 0.1);
 
   a {
     padding: 0.5rem 1rem;
@@ -28,15 +30,13 @@ body {
 
   a:hover {
     background-color: #376098;
-    color: white;
-    text-decoration-line: underline;
-    text-underline-offset: 0.2rem;
+    color: #ffffff;
   }
 }
 
 .description {
   margin-top: 2rem;
-  border: solid 0.15rem skyblue;
+  border: solid 0.15rem #87ceeb;
   padding: 1rem;
   display: flex;
   flex-direction: column;
@@ -112,15 +112,16 @@ body {
   }
 
   .col1 {
-    background-color: lightskyblue;
+    background-color: #87cefa;
   }
 
   .col2 {
-    background-color: lightblue;
+    background-color: #add8e6;
+    background-color: black;
   }
 
   .col3 {
-    background-color: lightsteelblue;
+    background-color: #b0c4de;
   }
 }
 
@@ -128,7 +129,7 @@ body {
   background-color: transparent;
   padding: 0.75rem;
   margin-top: 3rem;
-  border: solid 0.15rem steelblue;
+  border: solid 0.15rem #4682b4;
   width: 100%;
   height: 12rem;
   resize: none;
@@ -149,7 +150,7 @@ body {
   width: 8rem;
   border-radius: 0.5rem;
   border: none;
-  background-color: rgb(102, 179, 227);
+  background-color: #66b3e3;
 }
 
 .btn:hover {
