--- a/work1/NICECJ/海绵宝宝网页.css
+++ b/work1/NICECJ/海绵宝宝网页.css
@@ -6,21 +6,35 @@ nav {
     padding: 1rem;
 }
 
+.background{
+    background-color: #DCF3FF;
+} 
+ 
 .border1{
     position: relative;
     border: 1px solid #7296C5;
     border-radius: 50px;
     width: 100%;
-    height: 360px; 
-    margin-top: 5px;
+    height: 350px; 
     float: left;
-    padding-inline-start: 10px;
-    padding-top: 22px;
-    padding-bottom: 0px;
+    padding: 0 auto;
+    margin: auto;
+}
+
+.jianjie{
+    position: absolute;
+    left: 400px; 
+    top: 125px;
+    font-size: 20px;
 }
 
 .border2{
-    border-spacing: 50px 5px;
+    padding-top: 30px;
+    border-spacing: 150px 15px;
+}
+
+.gap{
+    width: 100%;
 }
 
 .p-border{
@@ -28,18 +42,36 @@ nav {
     height: 300px;
     border-radius: 50%;
     overflow: hidden;
+    padding-left: 10px;
+    padding-top: 10px;
+}
+
+.renwujieshao{
+    width: 300px;
+    border-radius: 20px;
+}
+
+.picture{
+    width: 300px;
+    border-radius: 20px;
+}
+.picture:hover{
+    transform: scale(1.2);
 }
 
 .yellow{
     background-color: #F8CF37;
+    text-align: center;
 }
 
 .pink{
     background-color: #D08079;
+    text-align: center;
 }
 
 .blue{
     background-color: #385F98;
+    text-align: center;
 }
 
 .center{
@@ -50,15 +82,17 @@ nav {
     text-align: left;
 }
 
-.background{
-    background-color: #DCF3FF;
-} 
-
-.gap{
-    width: 100%;
-    
+.b1{
+    background-color: #99ccff;  
 }
 
+.b2{
+    background-color: #87ceeb;
+}
+
+.b3{
+    background-color: #6699cc;
+}
 
 
 input[type="textarea"]{
@@ -69,4 +103,16 @@ input[type="textarea"]{
     border-radius: 5px;
     font-size: 16px;
 }
+
+.tijiao {
+    width: 80px;
+    height: 35px;
+    background-color: #6495ed;
+    border-radius: 5px;
+}
+
+.tijiao:hover{
+    transform: scale(1.2);
+}
+
 
