--- a/work3/West2onlineFrontEnd/src/assets/main.css
+++ b/work3/West2onlineFrontEnd/src/assets/main.css
@@ -1,4 +1,4 @@
-/* @import './base.css'; */
+@import './base.css';
 
 #app {
   display: flex;
@@ -26,4 +26,11 @@ a,
     background-color: hsla(160, 100%, 37%, 0.2);
   }
 }
+/* @media (min-width: 1024px) {
+  body {
+    display: flex;
+    place-items: center;
+  }
+
+} */
 
