--- a/work1/shiyi11-22/海绵宝宝.css
+++ b/work1/shiyi11-22/海绵宝宝.css
@@ -135,11 +135,14 @@ tbody{
     margin-top: 20px;
     padding:20px;
 }
-.feedback p{
+.feedback textarea{
+    width: 100%;
+    height: 200px;
     border:1px solid #03a9f4;
     padding:10px;
     border-radius: 5%;
     padding:10px 0 120px 0;
+    background:#dcf3ff;
 }
 .feedback button{
     float:right;
