--- a/work1/Xasteroid-star/style.css
+++ b/work1/Xasteroid-star/style.css
@@ -13,7 +13,7 @@ body {
   height: 50px;
 }
 .nav li {
-  font: 16px 微软雅黑;
+  font: bolder 16px "微软雅黑";
   float: left;
   list-style: none;
   line-height: 50px;
@@ -47,6 +47,7 @@ body {
 .content {
   margin-top: 80px;
   text-align: justify;
+
   font: bold;
 }
 
@@ -116,51 +117,40 @@ body {
   float: left;
   width: 1080px;
 }
-.ii {
+
+/* 列表 */
+.list {
   text-align: center;
-  float: left;
-  padding-inline: 311px;
-}
-.jj {
-  text-align: center;
-  float: left;
-  padding-inline: 169px;
-}
-.kk {
-  text-align: center;
-  float: left;
-  padding: 0 10px;
-}
-.box5 {
-  text-align: center;
-  text-align: center;
-  border-radius: 10px;
   margin: 0 auto;
   width: 1080px;
+}
+.number {
+  font-weight: bolder;
 }
 .i {
   text-align: center;
   padding: 0 288px;
-  float: left;
   background-color: #99ccff;
 }
 .j {
   text-align: center;
   padding: 0 130px;
-  float: left;
   background-color: #87ceeb;
 }
 .k {
   text-align: center;
   padding: 0px 10px;
-  float: left;
   background-color: #6699cc;
 }
-.box6 {
+textarea {
+  display: block;
   border-radius: 10px;
-  margin: 150px auto;
+  margin: 0 auto;
+  margin-top: 50px;
   width: 1080px;
+  height: 100px;
   border: 2px solid #b2e1f6;
+  background-color: #dcf3ff;
 }
 .button {
   float: right;
@@ -171,6 +161,6 @@ body {
   text-align: center;
   font-size: 16px;
   text-decoration: none;
-  margin: -100px 300px;
+  margin: 20px 300px;
   cursor: pointer;
 }
