add: modify work1

--- a/work1/betty11111122222/homework1/style.css
+++ b/work1/betty11111122222/homework1/style.css
@@ -89,6 +89,7 @@
     border:1px solid transparent;
     width:750px;
     height:150px;
+    border-collapse: collapse;
 }
 .center{
     text-align: center;
