add:improve work1 with textarea

--- a/work1/feelin0/海绵宝宝.css
+++ b/work1/feelin0/海绵宝宝.css
@@ -106,6 +106,7 @@ h4{
 .about{
     width: 800px;
     height: 180px;
+    display:block;
     margin: auto;
     border: 2px solid hsl(201, 75%, 76%);
     font-size: 14px;
