--- a/work1/flown-eden/style.css
+++ b/work1/flown-eden/style.css
@@ -28,7 +28,7 @@ body{
 }
 
 .intro{/*介绍样式*/
-    height: 1000px;/*高度*/
+    height:70%;/*高度*/
 }
 
 .abstract{/*简介样式*/
@@ -53,7 +53,7 @@ body{
 
 .chara{
     width: 85%;
-    height: 600px;
+    height: 50%;
     display: flex;
     margin: auto ;  
     margin-top: 50px;
@@ -63,6 +63,9 @@ body{
     flex-wrap: wrap; /* 如果容器不够宽，可以换行 */
 }
 .chara img{
+    margin-top: 50px;
+    margin-bottom: 50px;
+    height: 50%;
     width: 25%;
     border-radius: 30px;
 }
@@ -74,7 +77,7 @@ body{
 
 .text_content {
     width: 25%;
-    height: 100px;
+    height: 25%;
     border-radius: 15px; /* 圆角边框 */
     padding: 10px;
     margin-top: 10px; /* 上方间距 */
@@ -120,14 +123,14 @@ body{
 }
 
 .about{
-    height: 350px;
+    height: 30%;
     display: flex;
     flex-direction: column;
 }
 .about input{
     width: 85%;
     margin: 0 auto;
-    height: 50%;
+    height: 300px;
     border-color: #9ccded;
     background-color: rgb(207, 231, 245);
     font-size: 20px; /* 设置字体大小 */
