--- a/work1/rational456/css/haimianbaobao.css
+++ b/work1/rational456/css/haimianbaobao.css
@@ -102,3 +102,41 @@
                 height: 200px;
                 margin: auto;
             }
+            .box-1
+            {
+                width: 550px;
+                height: 20px;
+            }
+            .box-2
+            {
+                width: 550px;
+                height: 105px;
+                background-color: #99CCFF;
+            }
+            .box-3
+            {
+                width: 400px;
+                height: 20px;
+            }
+            .box-4
+            {
+                width: 380px;
+                height: 105px;
+                background-color: #87CEEB;
+            }
+            .box-5
+            {
+                width: 110px;
+                height: 20px;
+            }
+            .box-6
+            {
+                width: 110px;
+                height: 105px;
+                background-color: #6699CC;
+            }
+            .box-7
+            {
+                width: 940px;
+                height: 50px;
+            }
